add more vod locations

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,26 @@
- location /dash/ {
+location /thumb/ {
+    alias /videos/;  
+    vod thumb;
+
+    add_header Access-Control-Allow-Headers '*';
+    add_header Access-Control-Expose-Headers 'Server,range,Content-Length,Content-Range';
+    add_header Access-Control-Allow-Methods 'GET, HEAD, OPTIONS';
+    add_header Access-Control-Allow-Origin '*';
+    expires 100d;
+}
+
+location /content/ {
+    alias /videos/;  
+    vod none;
+
+    add_header Access-Control-Allow-Headers '*';
+    add_header Access-Control-Expose-Headers 'Server,range,Content-Length,Content-Range';
+    add_header Access-Control-Allow-Methods 'GET, HEAD, OPTIONS';
+    add_header Access-Control-Allow-Origin '*';
+    expires 100d;
+}
+
+location /dash/ {
     vod dash;
     alias /videos/;  
 
@@ -19,7 +41,7 @@
 location /hls/ {
     vod hls;
     alias /videos/;  
-    
+
     vod_bootstrap_segment_durations 2000;
     vod_bootstrap_segment_durations 2000;
     vod_bootstrap_segment_durations 2000;
